--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         This is our game, Asteriods!
         Hope you enjoy :)
     </h1>
+    <canvas id="bevy">
+        
+    </canvas>
 
 </body>
 </html>
