--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
         This is our game, Asteriods!
         Hope you enjoy :)
     </h1>
-    <canvas id="bevy">
-        
-    </canvas>
-
+    <script src="asteriods.js"></script>
 </body>
 </html>
